--- a/src/app/dashboard/card/card.component.css
+++ b/src/app/dashboard/card/card.component.css
@@ -1,13 +1,19 @@
 .card-container {
   min-width: 150px;
   min-height: 150px;
-  width: 20%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 3px 3px 10px #aaaaaa;
   border-radius: 5px;
+}
+
+.card-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  overflow: hidden;
 }
 
 .dark-background {
