--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+.component {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background: rgba(200, 200, 200, 0.3);
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.pop-up {
+  min-width: 450px;
+  background: white;
+  border-radius: 5px;
+  border: 1px solid whitesmoke;
+  padding: 30px 15px;
+  transform: translate(0, -60%);
+}
+
+.buttons-container {
+  margin: 15px 0 0 0;
+}
+
+.btn:disabled {
+  cursor: not-allowed;
+}
